# Android-Escape

./: CMakeLists.txt  README.md  main.cpp
entity/: collectible.cpp  collectible.h  collision_object.cpp  collision_object.h  enemy.cpp  enemy.h  entity.h  player.cpp  player.h  projectile.cpp  projectile.h  textbox.cpp  textbox.h  tile.cpp  tile.h
game_state/: renderer.cpp  renderer.h  states.cpp  states.h  world.cpp  world.h
helper/: utility.cpp  utility.h
shaders/: tilemap.frag
